Adding ball and paddle collision effects.

--- a/httpdocs/css/layout.less
+++ b/httpdocs/css/layout.less
@@ -24,6 +24,12 @@ html {
 				background: linear-gradient(#555, #333);
 				border: 2px solid #000;
 			}
+
+			>#ball {
+				position: absolute;
+				margin: 0;
+				background: linear-gradient(#333, #000);
+			}
 		}
 	}
 }
